--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   server:
     build: ./docker
-    image: myubuntu:flowtype
+    image: myubuntu:flowenv
     volumes:
       - '$PWD:/app'
     ports:
