--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "toast",
+  "name": "Mithril-Pokedex",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Pokédex written with mithriljs",
   "main": "index.js",
   "scripts": {
     "docker": "docker-compose up --build",
-    "start": "concurrently --kill-others \"npm run server\" \"flow check\" \"npm run webpack_dev\"",
+    "start": "concurrently --kill-others \"npm run server\" \"npm run webpack_dev\"",
     "server": "http-server ./ -p 8000",
     "flow": "flow check",
-    "webpack_dev": "./node_modules/.bin/webpack --config webpack.config.dev.js --watch -p"
+    "webpack_dev": "./node_modules/.bin/webpack --config webpack.config.dev.js --watch -p",
+    "test": "ospec"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "concurrently": "^3.4.0",
@@ -24,7 +26,10 @@
     "flow-babel-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.40.0",
     "http-server": "^0.9",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
+    "uuid": "^3.0.1",
     "webpack": "^2.2.1"
   },
   "dependencies": {
