--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
+    "classnames": "^2.2.5",
     "concurrently": "^3.4.0",
     "css-loader": "^0.26.2",
     "flow-babel-webpack-plugin": "^1.0.1",
@@ -30,6 +31,7 @@
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "uuid": "^3.0.1",
+    "voca": "^1.3.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
