--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3'
 
 services:
   server:
-    build: ./docker
+    build:
+    context: ./
+    dockerfile: ./docker/Dockerfile
     image: myubuntu:flowenv
     volumes:
       - '$PWD:/app'
