--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docker": "docker-compose up --build",
     "start": "concurrently --kill-others \"npm run server\" \"npm run webpack_dev\"",
-    "start_2": "concurrently --kill-others \"npm run server\" \"npm run webpack_dev\" \"npm run flow\"",
+    "start_2": "concurrently --kill-others \"npm run server\" \"flow\" \"npm run webpack_dev\" ",
     "server": "http-server ./ -p 8000",
     "flow": "flow",
     "webpack_dev": "./node_modules/.bin/webpack --config webpack.config.dev.js --watch -p",
@@ -23,14 +23,17 @@
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "classnames": "^2.2.5",
+    "clean-webpack-plugin": "^0.1.15",
     "concurrently": "^3.4.0",
     "css-loader": "^0.26.2",
+    "file-loader": "^0.10.1",
     "flow-babel-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.40.0",
     "http-server": "^0.9",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
     "uuid": "^3.0.1",
     "voca": "^1.3.0",
     "webpack": "^2.2.1"
