--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "docker": "docker-compose up --build",
-    "start": "concurrently --kill-others \"npm run server\" \"npm run webpack_dev\"",
-    "start_2": "concurrently --kill-others \"npm run server\" \"flow\" \"npm run webpack_dev\" ",
+    "start": "concurrently --prefix=command \"npm run server\" \"npm run webpack_dev\"",
     "server": "http-server ./ -p 8000",
-    "flow": "flow",
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "clean": "rimraf node_modules && npm cache clean && npm install",
     "webpack_dev": "./node_modules/.bin/webpack --config webpack.config.dev.js --debug --watch ",
     "test": "ospec"
   },
@@ -18,8 +18,9 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.4.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "classnames": "^2.2.5",
@@ -27,10 +28,11 @@
     "concurrently": "^3.4.0",
     "css-loader": "^0.26.2",
     "file-loader": "^0.10.1",
-    "flow-babel-webpack-plugin": "^1.0.1",
     "flow-bin": "^0.40.0",
     "http-server": "^0.9",
+    "node-notifier": "^5.0.2",
     "node-sass": "^4.5.0",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
@@ -39,7 +41,11 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "empty": "^0.10.1",
     "lodash": "^4.17.4",
     "mithril": "^1.0.1"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   }
 }
