--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "docker": "docker-compose up --build",
+    "docker_init": "docker-compose build",
     "start": "concurrently --prefix=command \"npm run server\" \"npm run webpack_dev\"",
     "server": "http-server ./ -p 8000",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "clean": "rimraf node_modules && npm cache clean && npm install",
+    "clean": "rimraf node_modules && npm cache clean && echo 'You have to install node_modules'",
     "webpack_dev": "./node_modules/.bin/webpack --config webpack.config.dev.js --debug --watch ",
     "test": "ospec"
   },
