--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,22 +1,13 @@
 FROM ubuntu:latest
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        apt-utils curl
-
-RUN cd ~
-RUN curl -sL https://deb.nodesource.com/setup_6.x | bash -
-
-
-RUN apt-get update \
     && apt-get install -y \
         nodejs \
+        npm \
         ocaml \
-        libelf-dev \
-        build-essential
+        libelf-dev
 
 RUN node -v
-
 RUN ln -s --force /usr/bin/nodejs /usr/local/bin/node \
     && ln -s --force /usr/bin/npm /usr/local/bin/npm
 
@@ -24,13 +15,10 @@ WORKDIR /app
 
 COPY . /app/
 
-RUN rm -rf /app/node_modules/.babel-cli.DELETE
 
-# RUN rm -rf node_modules
-RUN npm cache clean
-RUN npm install -g concurrently webpack http-server
-RUN npm rebuild node-sass
-# RUN npm install
 
+RUN npm install -g flow-bin \
+    && npm install \
+    && npm rebuild node-sass
 
 CMD npm run start
