--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
       ["transform-react-jsx", {
           "pragma": "m"
       }],
-      "transform-flow-strip-types"
+      "transform-flow-strip-types",
+      "transform-flow-comments"
   ]
 }
